Fix task tab spacing

--- a/src/index.css
+++ b/src/index.css
@@ -205,11 +205,9 @@ a {
 .tab {
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-start; */
-    min-height: 100vh;
     flex: 1 1 0;
-    overflow-y: auto;
-    min-height:0;
+    overflow: hidden;
+    min-height: 0;
     padding: 0 4rem;
 }
 
